--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!-- Latest compiled and minified CSS -->
+
+    <!-- Optional theme -->
     <title>React App</title>
   </head>
   <body>
